tests/ui/structopt_empty_attr.stderr
error: expected parentheses after `structopt`
  --> $DIR/structopt_empty_attr.rs:14:7
   |
14 |     #[structopt]
   |       ^^^^^^^^^
